simulator/compiler/ArduinoParser.py
# Generated from Arduino.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ArduinoParser ( Parser ):

    grammarFileName = "Arduino.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'#include'", "'<'", "'.'", "'>'", "';'", 
                     "'const'", "'static'", "'char'", "'='", "'*'", "'&'", 
                     "'#define'", "'['", "']'", "'{'", "','", "'}'", "'bool'", 
                     "'boolean'", "'byte'", "'double'", "'float'", "'int'", 
                     "'long'", "'short'", "'size_t'", "'String'", "'unsigned int'", 
                     "'unsigned char'", "'unsigned long'", "'void'", "'word'", 
                     "'('", "')'", "'while'", "'do'", "'for'", "'if'", "'else'", 
                     "'switch'", "'case'", "':'", "'default'", "'return'", 
                     "'break'", "'continue'", "'true'", "'false'", "'nullptr'", 
                     "'++'", "'--'", "'+'", "'-'", "'!'", "'~'", "'/'", 
                     "'%'", "'>='", "'<='", "'=='", "'!='", "'^'", "'|'", 
                     "'&&'", "'||'", "'?'", "'%='", "'&='", "'*='", "'+='", 
                     "'-='", "'/='", "'^='", "'|='", "'(unsigned int)'", 
                     "'(unsigned long)'", "<INVALID>", "<INVALID>", "'LOW'", 
                     "'HIGH'", "<INVALID>", "'INPUT'", "'INPUT_PULLUP'", 
                     "'OUTPUT'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "BIT_SHIFT_L", "BIT_SHIFT_R", "LOW", 
                      "HIGH", "ANALOG_PIN", "INPUT", "INPUT_PULLUP", "OUTPUT", 
                      "BINARY_CONST", "OCTAL_CONST", "HEX_CONST", "INT_CONST", 
                      "FLOAT_CONST", "CHAR_CONST", "UNTERMINATED_CHAR", 
                      "STRING_CONST", "UNTERMINATED_STRING", "ID", "LINE_COMMENT", 
                      "MULTILINE_COMMENT", "WHITESPACE" ]

    RULE_start = 0
    RULE_program = 1
    RULE_include = 2
    RULE_program_code = 3
    RULE_declaration = 4
    RULE_simple_declaration = 5
    RULE_array_declaration = 6
    RULE_pointer_ref = 7
    RULE_reference_ref = 8
    RULE_define_macro = 9
    RULE_array_index = 10
    RULE_array_elements = 11
    RULE_var_type = 12
    RULE_function = 13
    RULE_function_args = 14
    RULE_function_arg = 15
    RULE_iteration_sentence = 16
    RULE_conditional_sentence = 17
    RULE_case_sentence = 18
    RULE_code_block = 19
    RULE_sentence = 20
    RULE_scoped_block = 21
    RULE_assignment = 22
    RULE_expression = 23
    RULE_conversion = 24
    RULE_type_convert = 25
    RULE_parameter = 26

    ruleNames =  [ "start", "program", "include", "program_code", "declaration", 
                   "simple_declaration", "array_declaration", "pointer_ref", 
                   "reference_ref", "define_macro", "array_index", "array_elements", 
                   "var_type", "function", "function_args", "function_arg", 
                   "iteration_sentence", "conditional_sentence", "case_sentence", 
                   "code_block", "sentence", "scoped_block", "assignment", 
                   "expression", "conversion", "type_convert", "parameter" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    T__50=51
    T__51=52
    T__52=53
    T__53=54
    T__54=55
    T__55=56
    T__56=57
    T__57=58
    T__58=59
    T__59=60
    T__60=61
    T__61=62
    T__62=63
    T__63=64
    T__64=65
    T__65=66
    T__66=67
    T__67=68
    T__68=69
    T__69=70
    T__70=71
    T__71=72
    T__72=73
    T__73=74
    T__74=75
    T__75=76
    BIT_SHIFT_L=77
    BIT_SHIFT_R=78
    LOW=79
    HIGH=80
    ANALOG_PIN=81
    INPUT=82
    INPUT_PULLUP=83
    OUTPUT=84
    BINARY_CONST=85
    OCTAL_CONST=86
    HEX_CONST=87
    INT_CONST=88
    FLOAT_CONST=89
    CHAR_CONST=90
    UNTERMINATED_CHAR=91
    STRING_CONST=92
    UNTERMINATED_STRING=93
    ID=94
    LINE_COMMENT=95
    MULTILINE_COMMENT=96
    WHITESPACE=97

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def program(self):
            return self.getTypedRuleContext(ArduinoParser.ProgramContext,0)


        def EOF(self):
            return self.getToken(ArduinoParser.EOF, 0)

        def getRuleIndex(self):
            return ArduinoParser.RULE_start

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStart" ):
                listener.enterStart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStart" ):
                listener.exitStart(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStart" ):
                return visitor.visitStart(self)
            else:
                return visitor.visitChildren(self)




    def start(self):

        localctx = ArduinoParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            self.program()
            self.state = 55
            self.match(ArduinoParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._include = None # IncludeContext
            self.include_directives = list() # of IncludeContexts
            self._program_code = None # Program_codeContext
            self.code = list() # of Program_codeContexts

        def include(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ArduinoParser.IncludeContext)
            else:
                return self.getTypedRuleContext(ArduinoParser.IncludeContext,i)


        def program_code(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ArduinoParser.Program_codeContext)
            else:
                return self.getTypedRuleContext(ArduinoParser.Program_codeContext,i)


        def getRuleIndex(self):
            return ArduinoParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = ArduinoParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 60
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==1:
                self.state = 57
                localctx._include = self.include()
                localctx.include_directives.append(localctx._include)
                self.state = 62
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 66
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 8589676992) != 0) or _la==94:
                self.state = 63
                localctx._program_code = self.program_code()
                localctx.code.append(localctx._program_code)
                self.state = 68
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IncludeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING_CONST(self):
            return self.getToken(ArduinoParser.STRING_CONST, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(ArduinoParser.ID)
            else:
                return self.getToken(ArduinoParser.ID, i)

        def getRuleIndex(self):
            return ArduinoParser.RULE_include

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInclude" ):
                listener.enterInclude(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInclude" ):
                listener.exitInclude(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInclude" ):
                return visitor.visitInclude(self)
            else:
                return visitor.visitChildren(self)




    def include(self):

        localctx = ArduinoParser.IncludeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_include)
        try:
            self.state = 77
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 69
                self.match(ArduinoParser.T__0)
                self.state = 70
                self.match(ArduinoParser.STRING_CONST)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 71
                self.match(ArduinoParser.T__0)
                self.state = 72
                self.match(ArduinoParser.T__1)
                self.state = 73
                self.match(ArduinoParser.ID)
                self.state = 74
                self.match(ArduinoParser.T__2)
                self.state = 75
                self.match(ArduinoParser.ID)
                self.state = 76
                self.match(ArduinoParser.T__3)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Program_codeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.var_dec = None # DeclarationContext
            self.func_def = None # FunctionContext
            self.def_mac = None # Define_macroContext

        def declaration(self):
            return self.getTypedRuleContext(ArduinoParser.DeclarationContext,0)


        def function(self):
            return self.getTypedRuleContext(ArduinoParser.FunctionContext,0)


        def define_macro(self):
            return self.getTypedRuleContext(ArduinoParser.Define_macroContext,0)


        def getRuleIndex(self):
            return ArduinoParser.RULE_program_code

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram_code" ):
                listener.enterProgram_code(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram_code" ):
                listener.exitProgram_code(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram_code" ):
                return visitor.visitProgram_code(self)
            else:
                return visitor.visitChildren(self)




    def program_code(self):

        localctx = ArduinoParser.Program_codeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_program_code)
        try:
            self.state = 84
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 79
                localctx.var_dec = self.declaration()
                self.state = 80
                self.match(ArduinoParser.T__4)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 82
                localctx.func_def = self.function()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 83
                localctx.def_mac = self.define_macro()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.s_def = None # Simple_declarationContext
            self.a_def = None # Array_declarationContext
            self.qual = None # Token

        def simple_declaration(self):
            return self.getTypedRuleContext(ArduinoParser.Simple_declarationContext,0)


        def array_declaration(self):
            return self.getTypedRuleContext(ArduinoParser.Array_declarationContext,0)


        def declaration(self):
            return self.getTypedRuleContext(ArduinoParser.DeclarationContext,0)


        def getRuleIndex(self):
            return ArduinoParser.RULE_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaration" ):
                listener.enterDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaration" ):
                listener.exitDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaration" ):
                return visitor.visitDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def declaration(self):

        localctx = ArduinoParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_declaration)
        self._la = 0 # Token type
        try:
            self.state = 90
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 86
                localctx.s_def = self.simple_declaration()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 87
                localctx.a_def = self.array_declaration()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 88
                localctx.qual = self._input.LT(1)
                _la = self._input.LA(1)
                if not(_la==6 or _la==7):
                    localctx.qual = self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 89
                self.declaration()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Simple_declarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.ptr_type = None # Token
            self.v_type = None # Var_typeContext
            self.var_name = None # Token
            self.val = None # ExpressionContext

        def ID(self):
            return self.getToken(ArduinoParser.ID, 0)

        def var_type(self):
            return self.getTypedRuleContext(ArduinoParser.Var_typeContext,0)


        def expression(self):
            return self.getTypedRuleContext(ArduinoParser.ExpressionContext,0)


        def pointer_ref(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ArduinoParser.Pointer_refContext)
            else:
                return self.getTypedRuleContext(ArduinoParser.Pointer_refContext,i)


        def getRuleIndex(self):
            return ArduinoParser.RULE_simple_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSimple_declaration" ):
                listener.enterSimple_declaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSimple_declaration" ):
                listener.exitSimple_declaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSimple_declaration" ):
                return visitor.visitSimple_declaration(self)
            else:
                return visitor.visitChildren(self)




    def simple_declaration(self):

        localctx = ArduinoParser.Simple_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_simple_declaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.state = 92
                localctx.ptr_type = self.match(ArduinoParser.T__7)
                self.state = 94 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 93
                    self.pointer_ref()
                    self.state = 96 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==10):
                        break

                pass

            elif la_ == 2:
                self.state = 98
                localctx.v_type = self.var_type()
                pass


            self.state = 101
            localctx.var_name = self.match(ArduinoParser.ID)
            self.state = 104
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==9:
                self.state = 102
                self.match(ArduinoParser.T__8)
                self.state = 103
                localctx.val = self.expression(0)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_declarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.v_type = None # Var_typeContext
            self.var_name = None # Token
            self.a_index = None # Array_indexContext
            self.expr = None # ExpressionContext
            self.elems = None # Array_elementsContext

        def var_type(self):
            return self.getTypedRuleContext(ArduinoParser.Var_typeContext,0)


        def ID(self):
            return self.getToken(ArduinoParser.ID, 0)

        def array_index(self):
            return self.getTypedRuleContext(ArduinoParser.Array_indexContext,0)


        def expression(self):
            return self.getTypedRuleContext(ArduinoParser.ExpressionContext,0)


        def array_elements(self):
            return self.getTypedRuleContext(ArduinoParser.Array_elementsContext,0)


        def getRuleIndex(self):
            return ArduinoParser.RULE_array_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArray_declaration" ):
                listener.enterArray_declaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArray_declaration" ):
                listener.exitArray_declaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArray_declaration" ):
                return visitor.visitArray_declaration(self)
            else:
                return visitor.visitChildren(self)




    def array_declaration(self):

        localctx = ArduinoParser.Array_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_array_declaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            localctx.v_type = self.var_type()
            self.state = 107
            localctx.var_name = self.match(ArduinoParser.ID)
            self.state = 108
            localctx.a_index = self.array_index()
            self.state = 114
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==9:
                self.state = 109
                self.match(ArduinoParser.T__8)
                self.state = 112
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [8, 10, 11, 20, 22, 23, 24, 27, 32, 33, 47, 48, 49, 50, 51, 52, 53, 54, 55, 75, 76, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 92, 94]:
                    self.state = 110
                    localctx.expr = self.expression(0)
                    pass
                elif token in [15]:
                    self.state = 111
                    localctx.elems = self.array_elements()
                    pass
                else:
                    raise NoViableAltException(self)



        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Pointer_refContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ArduinoParser.RULE_pointer_ref

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPointer_ref" ):
                listener.enterPointer_ref(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPointer_ref" ):
                listener.exitPointer_ref(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPointer_ref" ):
                return visitor.visitPointer_ref(self)
            else:
                return visitor.visitChildren(self)




    def pointer_ref(self):

        localctx = ArduinoParser.Pointer_refContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_pointer_ref)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self.match(ArduinoParser.T__9)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Reference_refContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ArduinoParser.RULE_reference_ref

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReference_ref" ):
                listener.enterReference_ref(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReference_ref" ):
                listener.exitReference_ref(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReference_ref" ):
                return visitor.visitReference_ref(self)
            else:
                return visitor.visitChildren(self)




    def reference_ref(self):

        localctx = ArduinoParser.Reference_refContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_reference_ref)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.match(ArduinoParser.T__10)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Define_macroContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.val = None # ExpressionContext
            self.elems = None # Array_elementsContext

        def ID(self):
            return self.getToken(ArduinoParser.ID, 0)

        def expression(self):
            return self.getTypedRuleContext(ArduinoParser.ExpressionContext,0)


        def array_elements(self):
            return self.getTypedRuleContext(ArduinoParser.Array_elementsContext,0)


        def getRuleIndex(self):
            return ArduinoParser.RULE_define_macro

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDefine_macro" ):
                listener.enterDefine_macro(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDefine_macro" ):
                listener.exitDefine_macro(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDefine_macro" ):
                return visitor.visitDefine_macro(self)
            else:
                return visitor.visitChildren(self)




    def define_macro(self):

        localctx = ArduinoParser.Define_macroContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_define_macro)
        try:
            self.state = 126
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 120
                self.match(ArduinoParser.T__11)
                self.state = 121
                self.match(ArduinoParser.ID)
                self.state = 122
                localctx.val = self.expression(0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 123
                self.match(ArduinoParser.T__11)
                self.state = 124
                self.match(ArduinoParser.ID)
                self.state = 125
                localctx.elems = self.array_elements()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_indexContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.s13 = None # Token
            self.dimensions = list() # of Tokens
            self._INT_CONST = None # Token
            self.sizes = list() # of Tokens

        def INT_CONST(self, i:int=None):
            if i is None:
                return self.getTokens(ArduinoParser.INT_CONST)
            else:
                return self.getToken(ArduinoParser.INT_CONST, i)

        def getRuleIndex(self):
            return ArduinoParser.RULE_array_index

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArray_index" ):
                listener.enterArray_index(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArray_index" ):
                listener.exitArray_index(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArray_index" ):
                return visitor.visitArray_index(self)
            else:
                return visitor.visitChildren(self)




    def array_index(self):

        localctx = ArduinoParser.Array_indexContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_array_index)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            localctx.s13 = self.match(ArduinoParser.T__12)
            localctx.dimensions.append(localctx.s13)
            self.state = 130
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==88:
                self.state = 129
                localctx._INT_CONST = self.match(ArduinoParser.INT_CONST)
                localctx.sizes.append(localctx._INT_CONST)

